--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>session2</title>
 </head>
 <body>
+    <div>Hello Everyone</div>
+    <div>Hello Everone1</div>
+    <div>Hello Everone2</div>
     <h1>Variables</h1>
     <script src="script.js"></script>
 </body>
